@@ -52,12 +52,12 @@ object Common {
     javaOptions in Test := Seq(
       "-Xms128m",
       "-Xmx4096m",
-      "-XX:MaxPermSize=350m",
       "-ea",
       s"-Didea.system.path=$testSystemDir",
       s"-Didea.config.path=$testConfigDir",
       s"-Dsbt.ivy.home=$ivyHomeDir",
       s"-Dplugin.path=${packagedPluginDir.value}"
+//      ,"-agentlib:jdwp=transport=dt_socket,server=y,address=5005,suspend=y"
     ),
     envVars in Test += "NO_FS_ROOTS_ACCESS_CHECK" -> "yes",
     fullClasspath in Test <<= fullClasspath.in(Test).map(filterTestClasspath)
